Fixed SkyboxRenderer to work with new Asset URI scheme -- since wla URIs are created by hand, need to manually insert the server context.